[package]
name = "riddler"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rig-core = "0.12.0"
tokio = { version = "1.45.0", features = ["full"] }
colored = "2.1.0"
dialoguer = "0.11.0"
indicatif = "0.17.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
